actualizacion 2- 24 de mayo

--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="temas.css">
 </head>
 <body>
-   PLAN DE APOYO 
+  
+  <div  class="contenedor">
+    <div  class="encanbezado">PLAN DE APOYO </div>
+    <div  class="titulo1">
+
+        TECNOLOGÍA 
+    </div>
+
+
+
+
+  </div>  <div  class="titulo1">PLAN DE APOYO </div>
 </body>
 </html>
