--- a/index.html
+++ b/index.html
@@ -14,10 +14,23 @@
 
         TECNOLOGÍA 
     </div>
+    <div  class="titulo2">
+        FUENTES DE ENERGÍA
+    </div>
+
+    <div  class="texto1">
+        Son fenómenos naturales capaces de generar energía aprovechable para usos económicos o biofísicos,
+        dichas fuentes pueden ser variadas de orden físico o químico.
+        Los seres vivientes requerimos de energía
+        para existir, la cual obtenemos de diferentes orígenes los alimentos (energía química), el
+        sol (energía solar), el electromagnetismo (energía electromagnética).
+
+
+    </div>
 
 
 
 
-  </div>  <div  class="titulo1">PLAN DE APOYO </div>
+  </div>  
 </body>
 </html>
