--- a/sociales3.html
+++ b/sociales3.html
@@ -57,10 +57,40 @@
 
 <div class="texto">
    
-    <div  class="titulo">INICIO</div><br>
+    <div  class="titulo">sociales</div><br>
+
+ 
+
+    <div  class="karolg"></div>
+<div  class="yeimy"></div> <br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/DpDeHlu45As?si=fyGddFFQHBYX9CNK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></if 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/cQWRD5HdMF4?si=xykWIUrOgleXlP8X" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> <br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/F6CqyeD771E?si=iO9Uou32F9NtsVMT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
+
+<div  class="leon"></div>
+<div  class="hellostich"></div> <br>
+
+<iframe src="https://drive.google.com/file/d/1Rf9zlnuSj4mxMUY8KY-0_xVrLGyj1LkZ/preview" width="340" height="80" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1I0wBYu1BnXjAJOa7UYmWUhR-eXmUVDl_/preview" width="340" height="80" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1oEPE1l7aLJfnUtKURKLA3HCfxuG2fsYB/preview" width="340" height="80" allow="autoplay"></iframe>
+<iframe src="https://drive.google.com/file/d/1iLwKbEmgYxUVoTa7ntMG3RTiJvHFayth/preview" width="640" height="480" allow="autoplay"></iframe>
 
 
-</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 </div>
