--- a/sociales3.html
+++ b/sociales3.html
@@ -74,7 +74,7 @@
 <iframe src="https://drive.google.com/file/d/1I0wBYu1BnXjAJOa7UYmWUhR-eXmUVDl_/preview" width="340" height="80" allow="autoplay"></iframe>
 <iframe src="https://drive.google.com/file/d/1oEPE1l7aLJfnUtKURKLA3HCfxuG2fsYB/preview" width="340" height="80" allow="autoplay"></iframe>
 <iframe src="https://drive.google.com/file/d/1iLwKbEmgYxUVoTa7ntMG3RTiJvHFayth/preview" width="640" height="480" allow="autoplay"></iframe>
-
+<div  class="corona"></div>
 
 
 
