--- a/tecnologia3.html
+++ b/tecnologia3.html
@@ -59,6 +59,12 @@
    
     <div  class="titulo">TECNOLOGÍA</div><br>
     
+
+
+<div  class="excel"></div>
+
+
+
 convertir un numero en una representación de
 texto con la base indicada.
 <div  class="img11"></div>
@@ -183,8 +189,8 @@ Multiplicar <br>
 La función PRODUCTO multiplica todos los números dados como argumentos y devuelve el producto. Por ejemplo, si las celdas A1 y A2 contienen números, puede usar la fórmula =PRODUCTO(A1, A2) para multiplicar esos dos números. <br>
 
 <iframe src="https://drive.google.com/file/d/1-Nz0zJI_HWqslOa2iFD6S1Hrv1Ric4fY/preview" width="340" height="480" allow="autoplay"></iframe>
-
-
+<div  class="excel"></div>
+<div  class="exceldos"></div>
 </div>
 </body>
 </html>
